--- a/01-bookdown.Rmd
+++ b/01-bookdown.Rmd
@@ -250,6 +250,15 @@ R code-chunks allow more complex conditional formatting, where an interactive ma
  knitr::include_graphics("images/screenshot-tall.png")
 ```
 
+### TESTING with out.width=200 and auto-smaller-pdf in HTML and PDF
+...as shown in Figure \@ref(fig:screenshot-tall4).
+
+(ref:screenshot-tall4) Testing outwidth and auto smaller pdf together.
+
+```{r screenshot-tall4, out.width=200, fig.cap="(ref:screenshot-tall4)"}
+ knitr::include_graphics("images/screenshot-tall.png")
+```
+
 ### Demo: R code-chunk for HTML iframe and static image {-}
 ...as shown in Figure \@ref(fig:sample-map).
 
